# synth-struct

./: .gitignore  LICENSE.md  README.md  TODO.md  pyproject.toml  setup.py
examples/: __init__.py  aniso_mesh_output.py  basic_example.py  basic_example_2d.py  basic_example_3d.py  dream3d_example.py  iso_mesh_output.py  mask_box.py  mask_custom.py  mask_cylinder.py  mask_layer.py  mask_layer.txt  mask_sphere.py  masks.py  middle_mask.py  middle_orientation.py  odf_examples.py  plotIPFcolorkeys.py  pole_figure_plotting.py  shapes.py  texture_cubic.py  texture_custom.py  vis_example.py  vis_example.txt
output/: microstructure.dream3d  microstructure_grains.raw  microstructure_meta.txt
src/: __init__.py  euler_quat_converter.py  euler_quat_r_converter.py  grain_utils.py  hdf5_writer.py  ipf_visualization.py  ipfcolorkeys.py  micro_utils.py  microstructure.py  plotting.py  rotation_converter.py  stiffness.py  texture.py  visualization.py
src/deprecated/: visualization.py
src/generators/: __init__.py  base.py  columnar.py  ellipsoidal.py  gen_base.py  gen_utils.py  lath.py  lath_updated.py  mixed.py  utils.py  voronoi.py
tests/: __init__.py  test_columnar.py  test_ellipsoidal.py  test_euler_quat_conversions.py  test_generator_base.py  test_micro_utils.py  test_microstructure.py  test_mixed.py  test_phase.py  test_rotations.py  test_stiffness.py  test_stiffness_cubic.py  test_stiffness_isotropic.py  test_stiffness_utils.py  test_struct_mesh.py  test_texture.py  test_texture_base.py  test_texture_cubic.py  test_texture_hexagonal.py  test_voronoi.py
(+75 files in other folders)
